[gd_scene load_steps=4 format=3 uid="uid://dqafhau8sjjke"]

[ext_resource type="Texture2D" uid="uid://bj50mkfppbuar" path="res://objects/boxes/boxes.png" id="1_0pr6h"]
[ext_resource type="Script" path="res://objects/boxes/box.gd" id="2_8vifr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bovbd"]
size = Vector2(15, 15)

[node name="box" type="Sprite2D"]
self_modulate = Color(1, 0.501961, 0, 1)
z_index = 1
texture = ExtResource("1_0pr6h")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)
script = ExtResource("2_8vifr")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("RectangleShape2D_bovbd")

[connection signal="input_event" from="Area2D" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
